--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,155 @@
   }
 }
 
+
+@-webkit-keyframes come-in {
+  0% {
+    -webkit-transform: translatey(100px);
+            transform: translatey(100px);
+    opacity: 0;
+  }
+  30% {
+    -webkit-transform: translateX(-50px) scale(0.4);
+            transform: translateX(-50px) scale(0.4);
+  }
+  70% {
+    -webkit-transform: translateX(0px) scale(1.2);
+            transform: translateX(0px) scale(1.2);
+  }
+  100% {
+    -webkit-transform: translatey(0px) scale(1);
+            transform: translatey(0px) scale(1);
+    opacity: 1;
+  }
+}
+@keyframes come-in {
+  0% {
+    -webkit-transform: translatey(100px);
+            transform: translatey(100px);
+    opacity: 0;
+  }
+  30% {
+    -webkit-transform: translateX(-50px) scale(0.4);
+            transform: translateX(-50px) scale(0.4);
+  }
+  70% {
+    -webkit-transform: translateX(0px) scale(1.2);
+            transform: translateX(0px) scale(1.2);
+  }
+  100% {
+    -webkit-transform: translatey(0px) scale(1);
+            transform: translatey(0px) scale(1);
+    opacity: 1;
+  }
+}
+
+
+.floating-container {
+  position: fixed;
+  width: 100px;
+  height: 100px;
+  bottom: 0;
+  right: 0;
+  margin: 35px 25px;
+  z-index: 10000;
+}
+.floating-container:hover {
+  height: 250px;
+}
+.floating-container:hover .floating-button {
+  box-shadow: 0 10px 25px rgba(44, 179, 240, 0.6);
+  -webkit-transform: translatey(5px);
+          transform: translatey(5px);
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.floating-container:hover .element-container .float-element:nth-child(1) {
+  -webkit-animation: come-in 0.4s forwards 0.2s;
+          animation: come-in 0.4s forwards 0.2s;
+}
+.floating-container:hover .element-container .float-element:nth-child(2) {
+  -webkit-animation: come-in 0.4s forwards 0.4s;
+          animation: come-in 0.4s forwards 0.4s;
+}
+.floating-container:hover .element-container .float-element:nth-child(3) {
+  -webkit-animation: come-in 0.4s forwards 0.6s;
+          animation: come-in 0.4s forwards 0.6s;
+}
+.floating-container .floating-button {
+  position: absolute;
+  width: 65px;
+  height: 65px;
+  background: var(--bs-primary);
+  bottom: 0;
+  border-radius: 50%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  color: white;
+  line-height: 65px;
+  text-align: center;
+  font-size: 23px;
+  z-index: 10002;
+  box-shadow: 0 10px 25px -5px rgba(44, 179, 240, 0.6);
+  cursor: pointer;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+
+.floating-container .float-element 
+{
+  border: 1px solid #0d6efd;;
+  background-color: rgba(13, 110, 253, 0.5);
+  /* rgba(13, 110, 253, 0.2); */
+  backdrop-filter: blur(3px);
+  position: relative;
+  display: block;
+  border-radius: 20px;
+  width: 230px;
+  height: 165px;
+  margin: 15px auto;
+  color: white;
+  font-weight: 500;
+  /* text-align: center; */
+  line-height: 30px;
+  z-index: 9999;
+  opacity: 0;
+  left: -130px;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+}
+
+
+
+.floating-container .float-element .cta-title
+{
+  text-align: center;
+  padding: 20px;
+  font-size: 20px;
+  color: #fff;
+}
+.floating-container .float-element .material-icons {
+  /* vertical-align: middle; */
+  padding: 20px;
+  font-size: 18px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
@@ -745,8 +894,18 @@ progress {
 .content-image
 {
   /* border: 1px solid red; */
-  width: 80%;
+  width: 90%;
 }
+
+@media screen and (max-width: 640px)
+{
+  .content-image
+  {
+    /* border: 1px solid red; */
+    width: 80%;
+  }
+}
+
 
 .content-details {
   position: absolute;
@@ -4514,7 +4673,7 @@ textarea.form-control-lg {
   --bs-card-cap-padding-x: 1rem;
   --bs-card-cap-bg: rgba(0, 0, 0, 0.03);
   --bs-card-cap-color: ;
-  --bs-card-height: 300px;
+  /* --bs-card-height: 350px; */
   --bs-card-color: ;
   --bs-card-bg: #fff;
   --bs-card-img-overlay-padding: 1rem;
@@ -4529,13 +4688,88 @@ textarea.form-control-lg {
   background-clip: border-box;
   border: var(--bs-card-border-width) solid var(--bs-card-border-color);
   border-radius: var(--bs-card-border-radius);
+
+  scale: 1;
+  transition-duration: 300ms;
+  overflow: hidden;
+}
+
+.card:hover
+{
+  scale: 0.95;
+  transition-duration: 500ms;
+}
+
+
+.card-11 {
+  --bs-card-spacer-y: 1rem;
+  --bs-card-spacer-x: 1rem;
+  --bs-card-title-spacer-y: 0.5rem;
+  --bs-card-border-width: 1px;
+  --bs-card-border-color: var(--bs-border-color-translucent);
+  --bs-card-border-radius: 0.375rem;
+  --bs-card-box-shadow: ;
+  --bs-card-inner-border-radius: calc(0.375rem - 1px);
+  --bs-card-cap-padding-y: 0.5rem;
+  --bs-card-cap-padding-x: 1rem;
+  --bs-card-cap-bg: rgba(0, 0, 0, 0.03);
+  --bs-card-cap-color: ;
+  /* --bs-card-height: 350px; */
+  --bs-card-color: ;
+  --bs-card-bg: #fff;
+  --bs-card-img-overlay-padding: 1rem;
+  --bs-card-group-margin: 0.75rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  height: var(--bs-card-height);
+  word-wrap: break-word;
+  background-color: var(--bs-card-bg);
+  background-clip: border-box;
+  border: var(--bs-card-border-width) solid var(--bs-card-border-color);
+  border-radius: var(--bs-card-border-radius);
+
+  scale: 1;
+  transition-duration: 300ms;
+  overflow: hidden;
+}
+
+.card-11:hover
+{
+  scale: 1.5;
+  transition-duration: 500ms;
 }
 
 
 .card-image-top
 {
-  height: 200px;
+  /* height: 100%; */
+  width: 100%;
+  scale: 1;
+  transition-duration: 300ms;
 }
+
+.card-image-top:hover
+{
+  scale: 1.2;
+  transition-duration: 500ms;
+}
+
+.card-image-top-11
+{
+  /* height: 100%; */
+  width: 100%;
+  scale: 1;
+  transition-duration: 300ms;
+}
+
+.card-image-top-11:hover
+{
+  /* scale: 1.5; */
+  transition-duration: 500ms;
+}
+
 .card > hr {
   margin-right: 0;
   margin-left: 0;
@@ -4559,15 +4793,24 @@ textarea.form-control-lg {
   border-top: 0;
 }
 
-.card-body {
+.card-body 
+{
   flex: 1 1 auto;
-  padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
+  /* padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x); */
   color: var(--bs-card-color);
+  overflow: hidden;
+}
+
+.card-body-2
+{
+  color: var(--bs-card-color);
+  overflow: hidden;
 }
 
 .card-title {
   font-size: 1.5rem;
-  margin-bottom: var(--bs-card-title-spacer-y);
+  margin-top: 20px;
+  /* margin-bottom: var(--bs-card-title-spacer-y); */
 }
 
 /* .card-title-small 
@@ -4625,14 +4868,32 @@ textarea.form-control-lg {
   margin-left: calc(-0.5 * var(--bs-card-cap-padding-x));
 }
 
-.card-img-overlay {
+.card-img-overlay 
+{
   position: absolute;
-  top: 0;
-  right: 0;
+  vertical-align: middle;
+  /* top: 0; */
   bottom: 0;
-  left: 0;
-  padding: var(--bs-card-img-overlay-padding);
-  border-radius: var(--bs-card-inner-border-radius);
+  right: 0;
+  left: 0; 
+  /* padding: var(--bs-card-img-overlay-padding);
+  border-radius: var(--bs-card-inner-border-radius); */
+  background-color: rgba(0, 0, 0, 0.4);
+  text-align: start;
+}
+
+.card-img-overlay .card-title-2
+{
+  color: #fff;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.card-img-overlay .card-text-2
+{
+  color: #fff;
+  margin-left: 10px;
+  /* margin-top: 10px; */
 }
 
 .card-img,
@@ -4694,6 +4955,13 @@ textarea.form-control-lg {
     border-bottom-left-radius: 0;
   }
 }
+
+.carousal-img
+{
+  height: 400px;
+}
+
+
 
 .img_center
 {
